src/test/resources/frontendReference/invalid/semanticErr/class/simple/mismatchedClasses.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 16:2 -- Variable f is not defined in this scope
